# SQP_c

./: .gitignore  CMakeLists.txt  quickstart.md  readme.md
doc/: sqp.md  sqp.py  test.c  两阶段单纯形法.py  单纯形法.py  可以多线程函数实例.md  小白开发指南.md  线性规划初始值.md
include/: blzd_test.h  elog_cfg.h  f2c.h  function.h  hash_table.h  index_set.h  linear_equations.h  linearequations.h  lp.h  matrix.h  myvector.h  pointer_buffer.h  qp.h  random.h  simplex.h  slsqp.h  sparse_matrix.h  sqp.h  util.h  vector.h
other/: FortranCode.md  f2c.h  pythentest.py  slsqp.c  slsqp.h
src/: d_sign.c  function.c  linearequations.c  main.c  matrix.c  pythentest.py  slsqp.c  slsqp.f  slsqp.f90
src/function/: function.c
src/linarg/: linear_equations.c  matrix.c  myvector.c  pinv.c  sparse_,matrix.c  svd.c  vector.c
src/log/: elog_port.c
src/optimize/: lp.c  qp.c  scipy_simplex.c  simplex.c  sqp.c  sqpm.c
src/util/: hash_table.c  index_set.c  init.c  pointer_buffer.c  random.c  util.c
test/: CMakeLists.txt  test_function.c  test_function_function.c  test_function_function_with_openmp.c  test_hashtable.c  test_linarg_linearequations2.c  test_linarg_linearequations3.c  test_linarg_pinv.c  test_linear_equations.c  test_linear_equations4.c  test_log.c  test_log_elog.c  test_lp.c  test_lp2.c  test_lp3.c  test_lp4.c  test_matrix.c  test_matrix2.c  test_matrix3.c  test_matrix_free.c  test_matrix_lu.c  test_openmp.c  test_optimize_active_set.c  test_optimize_active_set2.c  test_optimize_active_set3.c  test_optimize_lp.c  test_optimize_lp2.c  test_optimize_lp3.c  test_optimize_qp.c  test_optimize_qp_active_set.c  test_optimize_qp_active_set2.c  test_optimize_qp_active_set3.c  test_optimize_qp_active_set_fromsqp.c  test_optimize_simplex.c  test_optimize_simplex2.c  test_optimize_simplex3.c  test_optimize_simplex4.c  test_optimize_simplex5.c  test_optimize_simplex6.c  test_optimize_sqp.c  (+25 more)
