cmake_minimum_required(VERSION 3.16)
project(sqp_c)
include_directories ("include")

aux_source_directory("src/function" DIR_SRCS)
aux_source_directory("src/linarg" DIR_SRCS)
aux_source_directory("src/util" DIR_SRCS)
aux_source_directory("src/log" DIR_SRCS)
aux_source_directory("src/optimize" DIR_SRCS)

MESSAGE(STATUS "operation system is ${CMAKE_SYSTEM}")
 
IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
	MESSAGE(STATUS "current platform: Linux ")
    LINK_LIBRARIES(m)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
	MESSAGE(STATUS "current platform: Windows")
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
	MESSAGE(STATUS "current platform: FreeBSD")
ELSE ()
	MESSAGE(STATUS "other platform: ${CMAKE_SYSTEM_NAME}")
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
add_library(sqp STATIC ${DIR_SRCS})
target_compile_options(sqp PRIVATE -Wall)

find_package(OpenMP REQUIRED)
if(OpenMP_FOUND)
    message(STATUS "found openmp") 
    # set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS}, ${OPENMP_C_FLAGS})
    # # set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS}, ${OPENMP_CXX_FLAGS})
    target_link_libraries(sqp OpenMP::OpenMP_C) 
else()
    message(FATAL_ERROR "openmp not found!")
endif()


# add_executable(sqp ${DIR_SRCS})
enable_testing()
add_subdirectory(test)